--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -63,7 +63,7 @@
 
   &__image-container {
     width: 100%;
-    min-height: 151px;
+    height: 151px;
     border-radius: 4px 4px 0 0;
     cursor: pointer;
   }
